--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_add"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title="Logout"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/menu_setting"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="Logout"
         app:showAsAction="always"/>
+
+
+
 </menu>
