--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,14 +4,12 @@
 
     <item
         android:id="@+id/menu_add"
-        android:icon="@drawable/ic_baseline_add_24"
-        android:title="Logout"
-        app:showAsAction="always"/>
+        android:title="@string/add"
+        app:showAsAction="collapseActionView"/>
     <item
         android:id="@+id/menu_setting"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Logout"
-        app:showAsAction="always"/>
+        android:title="@string/logout"
+        app:showAsAction="collapseActionView"/>
 
 
 
