--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login.LoginActivity">
+    tools:context=".login.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_login2"
         app:startIconDrawable="@drawable/ic_baseline_email_24">
 
-        <com.example.storyapp.CustomView.EmailView
+        <com.example.storyapp.custom_view.EmailView
             android:id="@+id/edEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -99,7 +99,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inp_email">
 
-        <com.example.storyapp.CustomView.PasswordView
+        <com.example.storyapp.custom_view.PasswordView
             android:id="@+id/edPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
