--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Register.RegisterActivity">
+    tools:context=".register.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_regist2"
         app:startIconDrawable="@drawable/ic_baseline_person_24">
 
-        <com.example.storyapp.CustomView.NameView
+        <com.example.storyapp.custom_view.NameView
             android:id="@+id/edName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -97,7 +97,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inp_name">
 
-        <com.example.storyapp.CustomView.EmailView
+        <com.example.storyapp.custom_view.EmailView
             android:id="@+id/edEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -118,7 +118,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inp_regis_email">
 
-        <com.example.storyapp.CustomView.PasswordView
+        <com.example.storyapp.custom_view.PasswordView
             android:id="@+id/edPasword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
